--- a/config/my_keyboard.conf
+++ b/config/my_keyboard.conf
@@ -2,3 +2,4 @@
 CONFIG_ZMK_POINTING=y
 #CONFIG_ZMK_STUDIO_LOCKING=n
 #CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
+CONFIG_ZMK_KEYBOARD_NAME="tini_keyboard"
