--- a/config/my_keyboard.conf
+++ b/config/my_keyboard.conf
@@ -1,12 +1,5 @@
 # Put configuration options here
 CONFIG_ZMK_POINTING=y
-
-# 必须启用这些选项
-CONFIG_ZMK_STUDIO=y
-
-CONFIG_ZMK_STUDIO_RPC=y
 CONFIG_ZMK_STUDIO_LOCKING=n
-CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
-
-# Studio 必需的键盘配置
+#CONFIG_ZMK_STUDIO_LOCK_ON_DISCONNECT=n
 CONFIG_ZMK_KEYBOARD_NAME="tini_keyboard"
